# unending-adventure

./: .gitignore  README.md
unending-client/: Cargo.toml
unending-client/src/: character.rs  connection.rs  draw.rs  events.rs  game.rs  input.rs  main.rs  ui.rs  world.rs
unending-server/: Cargo.toml
unending-server/src/: data.rs  db.rs  generate.rs  llm.rs  log.rs  main.rs  server.rs  template.rs
unending-server/templates/prompts/: area_desc.txt  area_name.txt  boss_name.txt  enemy_name.txt  fetch_item.txt  loot_item.txt  npc_name.txt  quest_desc.txt  quest_giver.txt
unending-server/templates/quests/: boss.txt  fetch.txt  genocide.txt  loot.txt  talk.txt
