[package]
name = "unending-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.8"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
unending-server = { path = "../unending-server" }
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
