[package]
name = "unending-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde_json = "1.0.119"
strum = "0.26.3"
strum_macros = "0.26.4"
